--- a/src/App.scss
+++ b/src/App.scss
@@ -1,40 +1,28 @@
+// BODY STYLES
 
 body {
-  background-image: url('corkboard2.jpg');
+  background-image: url('assets/corkboard2.jpg');
   background-size: contain;
   font-size: 62.5%;
+  font-family: 'Raleway', sans-serif;
 }
 
-header {
-  background-image: url('pinkPennant.jpg');
-  background-repeat: no-repeat;
-  background-size: contain;
+.banner {
+  width: 30%;
+  position: absolute;
+  top: -1%;
 }
 
-.headerImage {
-  width: 15%;
-}
-
-.headerImage img {
+.banner img {
   max-width: 100%;
 }
 
-.headerImage {
-  position: absolute;
-  right: -2%;
-  top: 25%;
-  transform: rotate(-35deg);
+.bannerContainer1 {
+  left: 0;
 }
 
-.stickyNoteContainer {
-  width: 18%;
-  position: absolute;
-  top: 0;
-  right: 4%;
-}
-
-.stickyNoteContainer img {
-  max-width: 100%;
+.bannerContainer2 {
+  right: 0;
 }
 
 h1 {
@@ -44,81 +32,82 @@ h1 {
   margin: 10px auto;
   text-align: center;
   width: 50%;
-  background-color: #fffff6;
+  background-color: #fffff9;
   border-radius: 5px;
-  padding: 10px;
+  padding: 15px;
+}
+
+header span {
+  border-bottom: 6px solid #c21734;
+  border-radius: 2px;
 }
 
 label {
   display: none;
 }
 
+// LANDING PAGE STYLES
+
 .intro {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 form {
   width: 50%;
-  background-color: #fffff6;
+  background-color: #fffff9;
   padding: 20px;
-  border-radius: 5px;
+  border-radius: 10px;
   border: 3px solid black;
 }
 
 form h2 {
-  font-family: 'Permanent Marker', cursive;
-  font-size: 2rem;
+  font-size: 1.6rem;
+  letter-spacing: 1px;
 }
 
 input[type="text"] {
+  font-family: 'Raleway', sans-serif;
   width: 85%;
+  padding: 10px;
   border: none;
   border-bottom: 3px solid black;
   margin-bottom: 5px;
-  background-color: #fffff6;
-  font-family: 'Shadows Into Light', cursive;
-  font-size: 1.4rem;
+  background-color: #fffff9;
+  font-size: 1rem;
 }
 
 input[type="submit"] {
+  font-family: 'Raleway', sans-serif;
   display: block;
   margin: 0 auto;
   margin-top: 20px;
-  border: 2px solid black;
+  color: #fffff9;
   border-radius: 5px;
   font-size: 1.2rem;
-  font-family: 'Permanent Marker', cursive;
-  transition: 0.5s;
+  transition: 0.8s;
+  background-color: #c21734;
+  padding: 10px;
+  border: none;
 }
 
 input[type="submit"]:hover {
-  background-color: pink;
+  background-color: #29bcb8;
+  color: black;
 }
 
+// VISION BOARD STYLES
+
 .goals h3 {
+  font-family: 'Permanent Marker', cursive;
   background-color: #fffff6;
   border-radius: 5px;
   font-size: 2rem;
-  font-family: 'Shadows Into Light', cursive;
   width: 200px;
   text-align: center;
-}
-
-
-.images {
-  width: 22%;
-}
-
-.images img {
-  max-width: 100%;
-  max-height: 200px;
-  background:white;
-  padding: 8px;
-  border:1px solid #999999;
 }
 
 .goals h3 {
@@ -127,43 +116,46 @@ input[type="submit"]:hover {
   transition: all 1s;
 }
 
-.goals h3:first-child {
+.goals .goal0 {
   top: 20%;
-  right: 20%;
+  right: 12%;
   transform: rotate(5deg);
+  text-decoration: underline #c21734;
 }
 
-.goals h3:first-child:hover {
+.goals .goal0:hover {
   transform: scale(1.1);
 }
 
-
-.goals h3:nth-child(2) {
+.goals .goal1 {
   top: 17%;
   left: 10%;
   transform: rotate(-5deg);
+  text-decoration: underline #29bcb8;
 }
 
-.goals h3:nth-child(2):hover {
+.goals .goal1:hover {
   transform: rotate(10deg);
 }
 
-.goals h3:nth-child(3) {
+.goals .goal2 {
   bottom: 5%;
-  right: 35%;
+  right: 30%;
+  text-decoration: underline #fed755;
 }
 
-.goals h3:nth-child(3):hover {
+.goals .goal2:hover {
   transform: rotate(-10deg);
 }
 
-.goals h3:nth-child(4) {
+.goals .goal3 {
   bottom: 25%;
   left: 10%;
   transform: rotate(5deg);
+  text-decoration: underline #f0767c;
 }
 
-.goals h3:nth-child(4):hover {
+.goals .goal3:hover {
   transform: scale(1.2);
 }
 
@@ -174,39 +166,47 @@ input[type="submit"]:hover {
   95% {transform: rotate(1deg)}
 }
 
-.stickyNoteContainer {
-  animation: move 5s ease-in-out infinite;
+.images0, .images1, .images2, .images3 {
+  width: 22%;
 }
 
-.photoList .images {
+.photoList img {
+  max-width: 100%;
+  max-height: 200px;
+  background:white;
+  padding: 8px;
+  border:1px solid #999999;
+}
+
+.photoList .images0, .photoList .images1, .photoList .images2, .photoList .images3 {
   position: absolute;
 }
 
-.images:first-child {
+.images0 {
   top: 33%;
-  right: 10%;
-  transform: rotate(-4deg)
+  right: 5%;
+  transform: rotate(-4deg);
 }
 
-.images:nth-child(2) {
-  bottom: 1%;
-  left: 10%;
-}
-
-.images:nth-child(3) {
+.images1 {
   top: 31%;
   left: 2%;
 }
 
-.images:nth-child(4) {
-  bottom: 1%;
-  right: 15%;
+.images2 {
+  bottom: 2%;
+  right: 10%;
   transform: rotate(5deg);
+}
+
+.images3 {
+  bottom: 1%;
+  left: 10%;
 }
 
 .modal {
   text-align: right;
-  margin: 0 20px 5px 0;
+  margin: 50px 50px 0 0;
 }
 
 @keyframes grow {
@@ -216,10 +216,14 @@ input[type="submit"]:hover {
 90% {transform: scale(1.02)}
 }
 
+
+// MAIN MODAL STYLES
+
 .modalButton {
+  font-family: 'Permanent Marker', cursive;
   border-radius: 50%;
   font-size: 2rem;
-  padding: 0 10px;
+  padding: 0 15px;
   background-color: black;
   color: white;
   border: none;
@@ -233,41 +237,44 @@ input[type="submit"]:hover {
   width: 50%;
   padding: 70px;
   border-radius: 5%;
-  background-color: #92d4c5;
+  background-color: #fece31;
   z-index: 3;
 }
 
 .modalInfo h2 {
-  text-align: center;
-  font-size: 1.5rem;
   font-family: 'Permanent Marker', cursive;
+  text-align: center;
+  font-size: 1.6rem;
 }
 
 .modalInfo p {
   text-align: left;
-  font-size: 1.4rem;
-  font-family: 'Shadows Into Light', cursive;
+  line-height: 40px;
+  font-size: 1.2rem;
 }
 
 .modalInfo i {
   font-size: 1.2rem;
 }
 
+
+// GOAL LIST STYLES
+
 .goalList {
-  width: 25%;
+  width: 30%;
   margin: 0 auto;
-  font-size: 1rem;
-  font-family: 'Shadows Into Light', cursive;
+  font-size: 0.8rem;
   border: none;
   background-color: white;
   text-align: center;
+  position: relative;
 }
 
 .goalList h4 {
+  font-family: 'Raleway', sans-serif;
   margin: 0;
-  margin-top: 10px;
-  font-family: 'Shadows Into Light', cursive;
-  font-size: 1.4rem;
+  padding: 10px;
+  font-size: 1rem;
   border-bottom: 2px solid pink;
 }
 
@@ -275,25 +282,20 @@ input[type="submit"]:hover {
   border: none;
   margin: 0 auto;
   background-color: white;
+  width: 70%;
 }
 
 .goalListForm input[type="text"] {
-  border-bottom: 2px solid black;
+  border-bottom: 1px solid black;
   width: 100%;
   margin: 0;
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
 
 .goalListForm input[type="submit"] {
-  font-size: 1rem;
-  font-family: 'Shadows Into Light', cursive;
-  border: 1px solid black;
-}
-
-.goalList button {
+  font-size: 0.6rem;
+  padding: 10px;
   border: none;
-  background-color: white;
-  margin-left: 10px;
 }
 
 ul {
@@ -307,7 +309,51 @@ li {
   margin-bottom: 10px;
 }
 
+.goalList button {
+  border: none;
+}
 
+
+// SMALLER MODAL AND BUTTON
+
+.modalButton2 {
+  position: absolute;
+  top: 2%;
+  right: 2%;
+  font-family: 'Permanent Marker', cursive;
+  border-radius: 50%;
+  padding: 5px 10px;
+  background-color: #29bcb8;
+  border: none;
+  color: white;
+}
+
+.modalInfo2 {
+  position: absolute;
+  left: 33%;
+  bottom: 33%;
+  width: 30%;
+  padding: 40px;
+  border-radius: 5%;
+  background-color: #fece31;
+  font-size: 0.8rem;
+  line-height: 20px;
+  z-index: 3;
+}
+
+.modalInfo p {
+  text-align: center;
+  line-height: 40px;
+  font-size: 1.2rem;
+}
+
+.modalInfo i {
+  font-size: 1.2rem;
+}
+
+
+
+// MEDIA QUERIES FOR RESPONSIVENESS
 
 @media (max-width: 950px){
   header {
@@ -321,9 +367,8 @@ li {
     font-size: 2.4rem;
   }
 
-  .stickyNoteContainer {
-    top: 7%;
-    right: 4%;
+  .bannerContainer2 {
+    display: none;
   }
 
   form {
@@ -331,7 +376,6 @@ li {
   }
   
   form h2 {
-    font-family: 'Permanent Marker', cursive;
     font-size: 1.8rem;
   }
   
@@ -344,20 +388,42 @@ li {
     font-size: 1.2rem;
   }
 
-  .images {
+  .images0, .images1, .images2, .images3 {
     width: 25%;
   }
-
+  
   .modal {
     margin-top: 20px;
   }
 
+  .modalInfo {
+    padding: 20px;
+  }
+
+  .modalInfo p {
+    font-size: 0.8rem;
+  }
+
+}
+
+@media (max-width: 850px){
+  .goalList {
+    width: 35%;
+  }
+
+  .goals .goal0 {
+    right: 5%;
+  }
+
+  .goals .goal3 {
+    bottom: 20%;
+  }
 }
 
 
 @media (max-width: 750px){
-  .stickyNoteContainer {
-    display: none;
+  .bannerContainer1{
+    width: 40%;
   }
 
   .modalInfo {
@@ -374,54 +440,48 @@ li {
     font-size: 1.2rem;
   }
   
-  .images {
+  .images0, .images1, .images2, .images3 {
     width: 40%;
   }
 
-  .images img {
-    transform: rotate(3deg);
+  .images0 {
+    right: 0;
   }
 
-  .images:nth-child(4) {
+  .images2 {
+    right: -2%;
+  }
+
+  .images3 {
     bottom: 3%;
     right: 5%;
   }
 
-  .goals h3:first-child {
-    top: 10%;
+  .goals .goal0 {
+    top: 20%;
     right: 10%;
   }
   
-  .goals h3:nth-child(2) {
-    top: 10%;
-    left: 10%;
-  }
-  
-  .goals h3:nth-child(3) {
-    bottom: 30%;
-    right: 5%;
-  }
-  
-  .goals h3:nth-child(4) {
-    bottom: 25%;
+  .goals .goal1 {
+    top: 15%;
     left: 10%;
   }
 
-  .images:first-child {
-    top: 23%;
+  .goals .goal2 {
+    right: 10%;
+    bottom: 25%;
   }
-  
-  .images:nth-child(3) {
-    top: 25%;
-    left: 2%;
-  }
+
+  .goals .goal3 {
+    bottom: 25%;
+    left: 5%;
+  } 
 
   .goalList {
-    margin-top: 40px;
     width: 50%;
     position: absolute;
     left: 30%;
-    bottom: -50%;
+    bottom: -40%;
   }
   
 }
@@ -431,13 +491,13 @@ li {
     width: 100%;
   }
 
-  .modal {
-    margin-top: 5px;
+  .bannerContainer1 {
+    display: none;
   }
 
-  .images:nth-child(4) {
-    bottom: 5%;
-    right: 8%;
+  .modalInfo p {
+    text-align: left;
+    font-size: 0.8rem;
   }
 
 }
@@ -501,7 +561,6 @@ li {
   }
   
   form h2 {
-    font-family: 'Permanent Marker', cursive;
     font-size: 1.4rem;
   }
   
@@ -532,11 +591,4 @@ li {
   .goalListForm {
     width: 70%;
   }
-
 }
-
-
-
-
-
-
